fixed wrap issue on badges, cleaned up console logs

--- a/widget/style.css
+++ b/widget/style.css
@@ -100,8 +100,8 @@ body {
 }
 
 .badge-display img {
-  height: 30px;
-  margin: 0 3px;
+  height: 25px;
+  margin: 0 4px;
 }
 
 #badge-box {
